# rocprofiler-sdk

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  README.md  requirements.txt
.github/: pull_request_template.md
.github/workflows/: OSDB.yml  PSDB.yml  continuous_integration.yml  docs.yml  force-sync.yml  formatting.yml  generate_afar.yml  kws.yml  python.yml  rerun.yml  rocm_ci_caller.yml  sync-mainline.yaml  sync-staging.yaml
cmake/: rocprofiler_build_settings.cmake  rocprofiler_config_install.cmake  rocprofiler_config_install_roctx.cmake  rocprofiler_config_interfaces.cmake  rocprofiler_config_packaging.cmake  rocprofiler_interfaces.cmake  rocprofiler_memcheck.cmake  rocprofiler_options.cmake
cmake/Modules/: FindrocDecode.cmake  rocprofiler-sdk-custom-compilation.cmake
cmake/Templates/rocprofiler-sdk/: config.cmake.in
samples/: CMakeLists.txt
samples/advanced_thread_trace/: CMakeLists.txt  client.cpp  main.cpp
samples/api_buffered_tracing/: client.cpp  main.cpp
samples/api_callback_tracing/: client.cpp  main.cpp
samples/code_object_isa_decode/: CMakeLists.txt  client.cpp  main.cpp
samples/code_object_tracing/: client.cpp  main.cpp
samples/common/: CMakeLists.txt  defines.hpp
samples/counter_collection/: CMakeLists.txt  callback_client.cpp  client.cpp  device_counting.cpp  device_counting_synchronous.cpp  main.cpp  per_dev_serialization.cpp  print_functional_counters.cpp
samples/external_correlation_id_request/: client.cpp
samples/intercept_table/: main.cpp
samples/openmp_target/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
samples/pc_sampling/: client.cpp  main.cpp  pcs.cpp  pcs.hpp  utils.cpp  utils.hpp
source/: CMakeLists.txt
source/docs/: CMakeLists.txt  _toc.yml.in  conf.py  index.rst  rocprofiler-sdk-roctx.dox.in  rocprofiler-sdk.dox.in  rocprofv3-schema.json  rocprofv3_input_schema.json
source/docs/api-reference/: buffered_services.md  callback_services.md  counter_collection_services.md  intercept_table.md  pc_sampling.md  tool_library.md
source/docs/conceptual/: comparing-with-legacy-tools.rst
source/docs/data/: counter_collection.csv  memory_allocation_trace.csv
source/docs/how-to/: samples.md  using-rocprofiler-sdk-roctx.rst  using-rocprofv3-with-mpi.rst  using-rocprofv3.rst
source/docs/install/: installation.md
source/docs/sphinx/: requirements.txt
source/include/rocprofiler-sdk/: CMakeLists.txt  agent.h  buffer_tracing.h  callback_tracing.h  context.h  counters.h  defines.h  device_counting_service.h  dispatch_counting_service.h  external_correlation.h  fwd.h  hsa.h  intercept_table.h  internal_threading.h  ompt.h  openmp.h  pc_sampling.h  profile_config.h  spm.h  (+3 more)
source/include/rocprofiler-sdk-roctx/: defines.h  roctx.h  types.h  version.h.in
source/include/rocprofiler-sdk/rocdecode/details/: CMakeLists.txt  roc_bitstream_reader.h  rocdecode.h  rocdecode_api_trace.h  rocparser.h
source/lib/: CMakeLists.txt
source/lib/output/: CMakeLists.txt  agent_info.hpp  buffered_output.hpp  counter_info.cpp  counter_info.hpp  csv.hpp  csv_output_file.cpp  csv_output_file.hpp  domain_type.cpp  domain_type.hpp  format_path.cpp  format_path.hpp  generateCSV.cpp  generateCSV.hpp  generateJSON.cpp  generateJSON.hpp  generateOTF2.cpp  generateOTF2.hpp  generatePerfetto.cpp  generatePerfetto.hpp  generateStats.cpp  generateStats.hpp  generator.hpp  host_symbol_info.hpp  kernel_symbol_info.hpp  metadata.cpp  metadata.hpp  output_config.cpp  output_config.hpp  output_key.cpp  output_key.hpp  output_stream.cpp  output_stream.hpp  pc_sample_transform.hpp  timestamps.hpp  tmp_file.cpp  tmp_file.hpp  tmp_file_buffer.cpp  tmp_file_buffer.hpp
source/lib/rocprofiler-sdk-att/: CMakeLists.txt  att_decoder.h  att_lib_wrapper.cpp  att_lib_wrapper.hpp  code.cpp  code.hpp  counters.cpp  counters.hpp  dl.cpp  dl.hpp  filenames.cpp  filenames.hpp  occupancy.cpp  occupancy.hpp  outputfile.hpp  profile_interface.cpp  profile_interface.hpp  util.hpp  wave.cpp  wave.hpp  wstates.cpp  wstates.hpp
source/lib/rocprofiler-sdk-att/tests/: CMakeLists.txt  att_decoder_test.cpp  dummy_decoder.cpp  standalone_tool_main.cpp
source/lib/rocprofiler-sdk-att/waitcnt/: CMakeLists.txt  analysis.cpp  analysis.hpp  gfx10.cpp  gfx12.cpp  gfx9.cpp
source/lib/rocprofiler-sdk-att/waitcnt/tests/: CMakeLists.txt  att_decoder_waitcnt_test.cpp
source/libexec/: CMakeLists.txt
source/libexec/rocprofiler-avail/: CMakeLists.txt  rocprofv3_avail.cpp
source/libexec/rocprofiler-sdk/rocprofiler-sdk-launch-compiler/: CMakeLists.txt  rocprofiler-sdk-launch-compiler.sh
source/sbin/: CMakeLists.txt
source/scripts/: generate-rocpd.py  run-ci.py  thread-sanitizer-suppr.txt  update-docs.sh  upload-image-to-github.py
tests/: CMakeLists.txt
tests/async-copy-tracing/: CMakeLists.txt  validate.py
tests/c-tool/: CMakeLists.txt
tests/common/: CMakeLists.txt  defines.hpp
tests/hip-graph-tracing/: CMakeLists.txt  validate.py
tests/hsa-memory-allocation/: CMakeLists.txt  conftest.py  validate.py
tests/kernel-tracing/: CMakeLists.txt  validate.py
tests/openmp-tools/: CMakeLists.txt  conftest.py  validate.py
tests/page-migration/: CMakeLists.txt  conftest.py  validate.py
tests/pc_sampling/: address_translation.cpp  address_translation.hpp  pcs.cpp  pcs.hpp  utils.cpp  utils.hpp
tests/pytest-packages/: CMakeLists.txt
tests/rocdecode/: CMakeLists.txt  conftest.py  validate.py
tests/rocprofv3/: CMakeLists.txt
tests/rocprofv3/advanced-thread-trace/: CMakeLists.txt  att_input.json  conftest.py  validate.py
tests/rocprofv3/counter-collection/list_metrics/: CMakeLists.txt  conftest.py  validate.py
tests/rocprofv3/pc-sampling/host-trap/exec-mask-manipulation/: CMakeLists.txt  conftest.py  validate.py
tests/rocprofv3/rocdecode-trace/: CMakeLists.txt  conftest.py  validate.py
tests/scratch-memory-tracing/: CMakeLists.txt  validate.py
tests/thread-trace/: CMakeLists.txt  agent.cpp  main.cpp  multi_dispatch.cpp  single_dispatch.cpp  trace_callbacks.cpp  trace_callbacks.hpp
tests/tools/: CMakeLists.txt  c-tool.c  json-tool.cpp
(+331 files in other folders)
